--- a/neighbourhood-quiz.html
+++ b/neighbourhood-quiz.html
@@ -6,6 +6,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Londrina+Shadow|Lato:400,300,900|Josefin+Sans:400,600,300' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=McLaren' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="image/png" href="favicon.png"/>
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>	
