page reload on click. Fixed responsive style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Londrina+Shadow|Lato:400,300,900|Josefin+Sans:400,600,300' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=McLaren' rel='stylesheet' type='text/css'>
 	<link rel="icon" type="image/png" href="favicon.png"/>
-	
+	<meta name="viewport" content="width=device-width">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>	
@@ -128,7 +128,7 @@
 		<div class="result hidden distillery">
 			<p class= "close">CLOSE</p>
 			<h2 class="top">You belong in...</h2>
-			<h2 class="neighbourhood">THE DISTILLERY</h2>
+			<h2 class="neighbourhood">THE DISTILLERY DISTRICT</h2>
 			<p class="description">You’re an arts and culture junkie with a deep appreciation for old-timey architecture—you belong in the Distillery District. So, what can you expect to find in this charming, pedestrian-only neighbourhood? Cobblestone streets lined with theatres, restaurants, galleries, boutique retailers and cafes. Get ready for the constant flow of tourists in your!</p>
 			<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://bit.ly/1JOaRAQ" data-text="I got THE DISTILLERY DISTRICT. What's your Toronto neighbourhood? Take the quiz: " data-via="milburnamanda" data-count="none" data-size="large" data-hashtags="YYZQuiz">Tweet</a>
 		</div>
