--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<h1>Find your 'hood</h1>
 		<h2>YYZ edition</h2>
 		<div class="start-button smoothScroll">
-			<a href="#main" class="start">Start</a>
+			<a data-scroll href="#main" class="start">Start</a>
 		</div>
 	</header>
 	<div class="main-container smoothScroll" id="main">
@@ -224,8 +224,9 @@
 		</div>
 	</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<scriptsrc="smoothscroll.js"></script>
-<script src="neighbourhood-quiz.js"></script>
+<script src="smooth-scroll.js"></script>
+<script src="script.js"></script>
+
 </body>
 
 </html>
